[package]
name = "glimpse"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "glimpse — 3D model thumbnail previews in Windows File Explorer (glTF/GLB, OBJ, Blockbench, Minecraft, Vintage Story)"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "glimpse-cli"
path = "src/bin/glimpse.rs"

[dependencies]
base64 = "0.22"
glam = "0.31"
gltf = "1.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
json5 = "0.4"
obj-rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com_Marshal",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_UI_Shell_PropertiesSystem",
]

[profile.release]
opt-level = 3
lto = true
strip = true
